Releases will be numbered with the following semantic versioning format:

<major>.<minor>.<patch>

And constructed with the following guidelines:

* Breaking backward compatibility bumps the major (and resets the minor 
  and patch)
* New additions without breaking backward compatibility bumps the minor 
  (and resets the patch)
* Bug fixes and misc changes bumps the patch

February 2014: PIBUSS version 1.3.5
------------------------------------------------
* Sequences in the alignment are now in the tree traversal order
* Added MG94 codon model

April 2014: PIBUSS version 1.3.6
------------------------------------------------
* Option to output ancestral sequences
* Starting sequence is now called root sequence to avoid confusion

September 2014: PIBUSS version 1.3.7
------------------------------------
* Fixed bug that cause non-randomized draws from relaxed clock models 
* XML generator adds "randomizeRates=true" attribute to DiscretizedBranchRates elements
* Added additional parameter to the NewickParser which allows the user to use node heights without specifying dates for taxa.
* Sensible starting values for UCLD clock

PIBUSS version 1.3.8 release candidate
--------------------------------------
* Parameters of the relaxed lognormal clock ar enow on the log scale by default and can be changed in XML only